# monitoring-backend

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  README.rst  docker-compose.main.yml  docker-compose.master.yml  docker-compose.staging.yml  docker-compose.yml  httpd.conf.template  pyproject.toml  requirements.txt  runserver.py
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  deployment-gcnet.yaml  deployment-lwf.yaml  deployment.yaml
gcnet/: README.md  README.rst  cleaner.py  csvvalidator.py  datvalidator.py  fields.py  helpers.py  main.py  models.py  urls.py  views.py  write_nead_config.py  writer.py
gcnet/batch/: csv_import_web.bat  dat_import.bat
gcnet/config/: gcnet_metadata.ini  nead_header.ini  stations.ini
gcnet/legacy/: cleaner_legacy.py  fortranprocessor.py  main_legacy.py
gcnet/management/commands/: csv_import.py  csv_logger.py  dat_import.py  gcnet_csv_export.py  gcnet_import_data.py  import_csv.py  import_data.py  importcommand.py
gcnet/nginx_waitress/: monitoring_nginx.conf
gcnet/templates/: index.html
gcnet/util/: constants.py  helpers.py  http_errors.py  nead_header_strings.py  stream.py  views_helpers.py  write_nead.py  write_nead_config.py  writer.py
generic/: views.py
generic/management/commands/: csv_import.py  nead_import.py  new_model.py
generic/templates/: api_documentation_template.css  api_documentation_template.html  api_documentation_template.js  api_documentation_template.json  index.html
generic/util/: commands_helpers.py  http_errors.py  nead.py  stream.py  views_helpers.py
lwf/: fields.py  helpers.py  main.py  routers.py  urls.py  views.py
lwf/batch/: lwf_csv_import.bat  lwf_csv_import_directory.bat  lwf_csv_import_historical_data.bat  lwf_new_model.bat
lwf/config/: LWFStations.ini  README.txt  alb.ini  alpthal_bestand_1.ini  bab.ini  baf.ini  beatenberg_bestand_2.ini  bettlachstock_freiland_5.ini  btb.ini  celerina_freiland_7.ini  chironico_freiland_9.ini  cib.ini  clb.ini  clf.ini  isf.ini  isone_freiland_13.ini  jussy_bestand_14.ini  jussy_freiland_15.ini  lab.ini  laf.ini  leb.ini  lens_bestand_20.ini  naf.ini  nationalpark_bestand_22.ini  nationalpark_freiland_23.ini  neb.ini  nef.ini  neunkirch_freiland_25.ini  nof.ini  novaggio_bestand_26.ini  novaggio_freiland_27.ini  otb.ini  othmarsingen_bestand_28.ini  scb.ini  schaenis_bestand_31.ini  schaenis_freiland_32.ini  test_conf.ini  visp_bestand_33.ini  vob.ini  vsb.ini
lwf/management/commands/: csv_import.py  import_data.py  lwf_csv_import.py  lwf_main_import.py  lwf_new_model.py
lwf/models/: LWFMeteo.py  LWFMeteoTest.py  LWFStation.py  __init__.py  lwf_meteo.py
lwf/templates/: lwf_documentation.html
lwf/util/: copy_dicts.py  http_errors.py  new_model_helpers.py  time_fields.py  view_helpers.py  views_helpers.py
monitoring/: fields.py  helpers.py  models.py  routers.py  settings.py  urls.py  views.py
monitoring-api/gcnet/: README.md  fields.py  main.py  models.py  urls.py  views.py
monitoring-api/gcnet/config/: gcnet_metadata.ini  stations.ini
monitoring-api/generic/: views.py
monitoring-api/lwf/: fields.py  main.py  urls.py
monitoring-api/project/: __version__.py  asgi.py  routers.py  settings.py  urls.py  wsgi.py
monitoring-api/templates/: 404.html
monitoring/models/: LWFMeteoTest.py
nginx/: Dockerfile  nginx.conf
nginx/templates/: monitoring.conf.template
nginx_waitress/: monitoring_nginx.conf
project/: asgi.py  routers.py  settings.py  urls.py
project/generic/: views.py
static/js/: lwf_documentation.js
static/json/: lwf_documentation.json
templates/: 404.html
tests/: test_unit.py
tests/gcnet/: gcnet_data_generator.py  test_gcnet.py  test_gcnet_api.py  test_gcnet_import.py  test_unit.py
(+136 files in other folders)
